--- a/src/ComponentsElectron/src/Microsoft.AspNetCore.Components.Electron.JS/Microsoft.AspNetCore.Components.Electron.JS.csproj
+++ b/src/ComponentsElectron/src/Microsoft.AspNetCore.Components.Electron.JS/Microsoft.AspNetCore.Components.Electron.JS.csproj
@@ -1,10 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <!-- Version of this SDK is set in global.json -->
   <Sdk Name="Yarn.MSBuild" />
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <DefaultItemExcludes>${DefaultItemExcludes};node_modules\**</DefaultItemExcludes>
