--- a/src/ComponentsElectron/src/Microsoft.AspNetCore.Components.Electron/Microsoft.AspNetCore.Components.Electron.csproj
+++ b/src/ComponentsElectron/src/Microsoft.AspNetCore.Components.Electron/Microsoft.AspNetCore.Components.Electron.csproj
@@ -1,13 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <OutputType>library</OutputType>
     <BlazorPackageVersion>3.0.0-preview9.19457.4</BlazorPackageVersion>
     <IsPackable>true</IsPackable>
     <!-- ElectronNET.API is not strong-named signed -->
     <SignAssembly>false</SignAssembly>
     <LangVersion>preview</LangVersion>
+    <Version>0.1.0-alpha.19165.3</Version>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
